Fix deprecated API calls